upload the design

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,10 @@
     <title>projects</title>
 </head>
 <body>
+    <div id="dotted-loader">
+        <div class="spinner"></div>
+    </div>
+    <div id="content">
     <div class="page d-flex">
         <!-- sidebar -->
         <div class="sidebar bg-white p-20 p-relative">
@@ -302,6 +306,8 @@
             </div>
         </div>
     </div>
+    </div>
+
 
 
 
