--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <div id="dotted-loader">
+        <div class="spinner"></div>
+    </div>
+    <div id="content">
     <div class="page d-flex">
         <!-- sidebar -->
         <div class="sidebar bg-white p-20 p-relative">
@@ -572,5 +576,7 @@
         </div>
         </div>
     </div>
+    </div>
+
 </body>
 </html>
