--- a/plans.html
+++ b/plans.html
@@ -15,6 +15,10 @@
     <title>plans</title>
 </head>
 <body>
+    <div id="dotted-loader">
+        <div class="spinner"></div>
+    </div>
+    <div id="content">
     <div class="page d-flex">
         <!-- sidebar -->
         <div class="sidebar bg-white p-20 p-relative">
@@ -254,6 +258,8 @@
             </div>
         </div>
     </div>
+    </div>
+
 </body>
 </html>
 
